feat - reflect new images and moved files into the html

--- a/custom_components/pro-journeys.html
+++ b/custom_components/pro-journeys.html
@@ -22,53 +22,76 @@
     <iron-grid current-screenformat="{{screenSize}}" class="container">
 
         <pro-journey
-          image-url="../src/kitsune.jpg"
+          image-url="../images/Rome.jpg"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../src/kitsune.jpg"
+          image-url="../images/Germany.jpg"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../src/kitsune.jpg"
+          image-url="../images/Manzanares.jpg"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../src/kitsune.jpg"
+          image-url="../images/Paris.jpg"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../src/kitsune.jpg"
+          image-url="../images/Brussels.jpg"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../src/kitsune.jpg"
+          image-url="../images/Hillerod.jpg"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../src/kitsune.jpg"
+          image-url="../images/Helsinki.jpg"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../src/kitsune.jpg"
+          image-url="../images/Stockholm.jpg"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
+        <pro-journey
+          image-url="../images/Odense.jpg"
+          text="{{t('pro-journeys-textn')}}"
+          class="xs12 s6 m4 l3">
+        </pro-journey>
+
+        <pro-journey
+          image-url="../images/RUC.jpg"
+          text="{{t('pro-journeys-textn')}}"
+          class="xs12 s6 m4 l3">
+        </pro-journey>
+
+        <pro-journey
+          image-url="../images/Merida.jpg"
+          text="{{t('pro-journeys-textn')}}"
+          class="xs12 s6 m4 l3">
+        </pro-journey>
+
+        <pro-journey
+          image-url="../images/London.jpg"
+          text="{{t('pro-journeys-textn')}}"
+          class="xs12 s6 m4 l3">
+        </pro-journey>
 
     </iron-grid>
 
