--- a/custom_components/pro-profile.html
+++ b/custom_components/pro-profile.html
@@ -62,7 +62,7 @@
     </style>
 
     <pro-section-header text="{{t('pro-profile-header')}}"></pro-section-header>
-    <img src="../src/kitsune.jpg" alt="profile picture" class="img">
+    <img src="../images/kitsune.jpg" alt="profile picture" class="img">
     <div class="text">
       <h2 class="textHeader">Héctor Moreno Cervera</h2>
       <!--DETALLES EN NEGRITA-->
