--- a/custom_components/pro-journey.html
+++ b/custom_components/pro-journey.html
@@ -30,12 +30,14 @@
       .img{
         max-height: 100%;
         max-width: 100%;
+        border: solid rgba(0, 0, 0, 0.25) 1px
       }
 
       .dialog{
         margin: 0;
         max-width: 90%;
         overflow: hidden;
+        height: calc(100% - 26%);
       }
 
       .dialogImage{
