fix - add position:inherit !important to prevent polymer from adding an outline when paper-submenus are focused

--- a/custom_components/pro-experience.html
+++ b/custom_components/pro-experience.html
@@ -39,6 +39,10 @@
       .openedMenu{
         transform: rotate(180deg);
       }
+
+      *:focus{
+        position: inherit !important;
+      }
     </style>
 
     <pro-section-header text="{{t('pro-experience-header')}}"></pro-section-header>
