feat - fill projects section

--- a/custom_components/pro-experience.html
+++ b/custom_components/pro-experience.html
@@ -61,8 +61,6 @@
               <br>
               Mathematics and Computer Science
               <br>
-              GPA 7.83
-              <br>
               2012 - 2016
             </div>
           </paper-item>
@@ -95,6 +93,73 @@
               Web Developer (Polymer)
               <br>
               07/2016 - Currently
+            </div>
+          </paper-item>
+        </paper-menu>
+      </pro-experience-submenu>
+      <pro-experience-submenu class="submenu" header-text="Projects">
+        <paper-menu class="menu-content menu" multi>
+          <paper-item>
+            <div class="section">
+              Graphical animation
+              <br>
+              Java and Processing
+              <br>
+              2014
+            </div>
+          </paper-item>
+          <paper-item>
+            <div class="section">
+              Checkers AI
+              <br>
+              C++ (console application)
+              <br>
+              Autumn 2015
+            </div>
+          </paper-item>
+          <paper-item>
+            <div class="section">
+              FullStack StackOverflow clone
+              <br>
+              C# and Jquery
+              <br>
+              Autumn 2015
+            </div>
+          </paper-item>
+          <paper-item>
+            <div class="section">
+              Online music player
+              <br>
+              HTML5, CSS3, JS
+              <br>
+              Early 2016
+            </div>
+          </paper-item>
+          <paper-item>
+            <div class="section">
+              Web backend
+              <br>
+              NodeJS and MongoDB
+              <br>
+              Early 2016
+            </div>
+          </paper-item>
+          <paper-item>
+            <div class="section">
+              VR videogame
+              <br>
+              A-frame
+              <br>
+              Late 2016
+            </div>
+          </paper-item>
+          <paper-item>
+            <div class="section">
+              hecmocer-pro (THIS)
+              <br>
+              Web Components
+              <br>
+              Late 2016
             </div>
           </paper-item>
         </paper-menu>
