feat - add icons to projects

--- a/custom_components/pro-experience.html
+++ b/custom_components/pro-experience.html
@@ -8,6 +8,9 @@
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../custom_components/pro-experience-submenu.html">
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/iron-icons/hardware-icons.html">
 
 
 <dom-module id="pro-experience">
@@ -47,6 +50,10 @@
       .section{
         border-left: solid black 1px;
         padding: 10px 0 10px 20px;
+      }
+
+      .ironIcon{
+        margin-bottom: 3px;
       }
     </style>
 
@@ -101,15 +108,8 @@
         <paper-menu class="menu-content menu" multi>
           <paper-item>
             <div class="section">
-              Graphical animation
+              <iron-icon class="ironIcon" icon="hardware:desktop-windows"></iron-icon>
               <br>
-              Java and Processing
-              <br>
-              2014
-            </div>
-          </paper-item>
-          <paper-item>
-            <div class="section">
               Checkers AI
               <br>
               C++ (console application)
@@ -119,6 +119,8 @@
           </paper-item>
           <paper-item>
             <div class="section">
+              <iron-icon class="ironIcon" icon="hardware:desktop-windows"></iron-icon>
+              <br>
               FullStack StackOverflow clone
               <br>
               C# and Jquery
@@ -128,6 +130,8 @@
           </paper-item>
           <paper-item>
             <div class="section">
+              <iron-icon class="ironIcon" icon="hardware:phonelink"></iron-icon>
+              <br>
               Online music player
               <br>
               HTML5, CSS3, JS
@@ -137,6 +141,8 @@
           </paper-item>
           <paper-item>
             <div class="section">
+              <iron-icon class="ironIcon" icon="hardware:phonelink-off"></iron-icon>
+              <br>
               Web backend
               <br>
               NodeJS and MongoDB
@@ -146,6 +152,8 @@
           </paper-item>
           <paper-item>
             <div class="section">
+              <iron-icon class="ironIcon" icon="hardware:phonelink"></iron-icon>
+              <br>
               VR videogame
               <br>
               A-frame
@@ -155,7 +163,9 @@
           </paper-item>
           <paper-item>
             <div class="section">
-              hecmocer-pro (THIS)
+              <iron-icon class="ironIcon" icon="hardware:phonelink"></iron-icon>
+              <br>
+              hecmocer-pro
               <br>
               Web Components
               <br>
