fix - small fixes in pro-experience (unused class, string renaming and removed extra closing tag)

--- a/custom_components/pro-experience.html
+++ b/custom_components/pro-experience.html
@@ -66,7 +66,7 @@
     <pro-section-header text="{{t('pro-experience-header')}}"></pro-section-header>
 
     <paper-menu multi class="paperMenu">
-      <pro-experience-submenu class="submenu" header-text="Education">
+      <pro-experience-submenu header-text="Education">
         <paper-menu class="menu-content menu" multi>
           <paper-item>
             <div class="section">
@@ -110,7 +110,7 @@
           </paper-item>
         </paper-menu>
       </pro-experience-submenu>
-      <pro-experience-submenu class="submenu" header-text="Projects">
+      <pro-experience-submenu header-text="Projects">
         <paper-menu class="menu-content menu" multi>
           <paper-item>
             <div class="section">
@@ -171,7 +171,7 @@
             <div class="section">
               <iron-icon class="ironIcon" icon="hardware:phonelink"></iron-icon>
               <br>
-              hecmocer-pro
+              Personal Website
               <br>
               Web Components
               <br>
@@ -283,8 +283,6 @@
           <paper-item style="display: inline">
             Jenkins
           </paper-item>
-        </paper-menu>
-
         </paper-menu>
       </pro-experience-submenu>
     </paper-menu>
