fix - remove page bump caused by changing 100vh when device’s chrome header appeared

--- a/custom_components/pro-welcome.html
+++ b/custom_components/pro-welcome.html
@@ -13,7 +13,7 @@
         margin-left: calc(40% - 768px);
       }
       .imageCenter{
-        height: 100vh;
+        height: 100%;
         margin-left: calc(50% - 50vh);
         /* 985 / 2 = 492 */
       }
