--- a/custom_components/pro-experience.html
+++ b/custom_components/pro-experience.html
@@ -11,6 +11,7 @@
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-icons/hardware-icons.html">
+<link rel="import" href="../bower_components/vaadin-icons/vaadin-icons.html">
 
 
 <dom-module id="pro-experience">
@@ -147,7 +148,7 @@
           </paper-item>
           <paper-item>
             <div class="section">
-              <iron-icon class="ironIcon" icon="hardware:phonelink-off"></iron-icon>
+              <iron-icon class="ironIcon" icon="vaadin-icons:server"></iron-icon>
               <br>
               Web backend
               <br>
@@ -159,6 +160,7 @@
           <paper-item>
             <div class="section">
               <iron-icon class="ironIcon" icon="hardware:phonelink"></iron-icon>
+              <iron-icon class="ironIcon" icon="vaadin-icons:gamepad"></iron-icon>
               <br>
               VR videogame
               <br>
