feat - add correct profile pictures

--- a/custom_components/pro-profile.html
+++ b/custom_components/pro-profile.html
@@ -75,14 +75,14 @@
     </style>
 
     <pro-section-header text="{{t('pro-profile-header')}}"></pro-section-header>
-    <img src="../images/kitsune.jpg" alt="profile picture" class="img" on-click="openDialog">
+    <img src="../images/smSquare.png" alt="profile picture" class="img" on-click="openDialog">
     <div class="text">
       <h2 class="textHeader">Héctor Moreno Cervera</h2>
       <!--DETALLES EN NEGRITA-->
       <p>{{t('pro-profile-about-me')}}</p>
     </div>
     <paper-dialog id="dialog" class="dialog" with-backdrop>
-      <img src="../images/kitsune.jpg" alt="" class="dialogImage" style="padding: 0; margin: 0;">
+      <img src="../images/profile.jpg" alt="" class="dialogImage" style="padding: 0; margin: 0;">
     </paper-dialog>
 
   </template>
