--- a/custom_components/pro-welcome.html
+++ b/custom_components/pro-welcome.html
@@ -22,7 +22,7 @@
     <iron-media-query query="(min-width: 600px)" query-matches="{{queryMatches}}"></iron-media-query>
 
     <template is="dom-if" if="{{!queryMatches}}">
-      <img class="imageCenter" src="../images/kitsune.jpg" alt="">
+      <img class="imageCenter" src="../images/profile.jpg" alt="">
     </template>
 
     <template is="dom-if" if="{{queryMatches}}">
