feat - add language toggle in footer

--- a/custom_components/pro-footer.html
+++ b/custom_components/pro-footer.html
@@ -1,6 +1,10 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../src/shared-styles.html">
 <link rel='import' href='pro-i18ned-component.html'>
+<link rel="import" href="../bower_components/paper-item/paper-item.html">
+<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
+<link rel="import" href="../bower_components/paper-item/paper-item.html">
 
 <dom-module id="pro-footer">
   <template>
@@ -17,8 +21,20 @@
     </style>
 
     <div>
-      <span>Hecmocer-Pro</span>
-      <span class="floatRight">15/01/16 - 0.0.1</span>
+      <paper-dropdown-menu label="Language" vertical-align="bottom" horizontal-align="left">
+        <paper-listbox class="dropdown-content" selected="1">
+          <paper-item>Spanish (ES)</paper-item>
+          <paper-item>English (EN)</paper-item>
+        </paper-listbox>
+      </paper-dropdown-menu>
+      <div class="floatRight">
+        <div>
+          HecmocerPro
+        </div>
+        <div>
+          15/01/16 - 0.0.1
+        </div>
+      </div>
     </div>
   </template>
 
