feat - add border in technologies experience

--- a/custom_components/pro-experience.html
+++ b/custom_components/pro-experience.html
@@ -205,111 +205,115 @@
             <iron-icon class="ironIcon animatedChevron" icon="vaadin-icons:touch"></iron-icon>
             <iron-icon class="ironIcon" icon="icons:chevron-right"></iron-icon>
           </paper-item>
-          <paper-item style="display: inline">
-            Java
-          </paper-item>
-          <paper-item style="display: inline">
-            C
-          </paper-item>
-          <paper-item style="display: inline">
-            C++
-          </paper-item>
-          <paper-item style="display: inline">
-            C#
-          </paper-item>
-          <paper-item style="display: inline">
-            Python
-          </paper-item>
-          <paper-item style="display: inline">
-            Matlab
-          </paper-item>
-          <paper-item style="display: inline">
-            LaTeX
-          </paper-item>
-          <paper-item style="display: inline">
-            Maple
-          </paper-item>
-          <paper-item style="display: inline">
-            BASH
-          </paper-item>
-          <paper-item style="display: inline">
-            Haskell
-          </paper-item>
-          <paper-item style="display: inline">
-            Assembler
-          </paper-item>
-          <paper-item style="display: inline">
-            Pascal
-          </paper-item>
-          <paper-item style="display: inline">
-            Processing
-          </paper-item>
-          <paper-item style="display: inline">
-            Blender
-          </paper-item>
+          <span class="section">
+            <paper-item style="display: inline">
+              Java
+            </paper-item>
+            <paper-item style="display: inline">
+              C
+            </paper-item>
+            <paper-item style="display: inline">
+              C++
+            </paper-item>
+            <paper-item style="display: inline">
+              C#
+            </paper-item>
+            <paper-item style="display: inline">
+              Python
+            </paper-item>
+            <paper-item style="display: inline">
+              Matlab
+            </paper-item>
+            <paper-item style="display: inline">
+              LaTeX
+            </paper-item>
+            <paper-item style="display: inline">
+              Maple
+            </paper-item>
+            <paper-item style="display: inline">
+              BASH
+            </paper-item>
+            <paper-item style="display: inline">
+              Haskell
+            </paper-item>
+            <paper-item style="display: inline">
+              Assembler
+            </paper-item>
+            <paper-item style="display: inline">
+              Pascal
+            </paper-item>
+            <paper-item style="display: inline">
+              Processing
+            </paper-item>
+            <paper-item style="display: inline">
+              Blender
+            </paper-item>
+          </span>
         </paper-menu>
         <paper-menu class="menu-content menu techMenu" multi>
           <paper-item style="display: inline; padding: 0">
             <iron-icon class="ironIcon animatedChevron" icon="vaadin-icons:touch"></iron-icon>
             <iron-icon class="ironIcon" icon="icons:chevron-right"></iron-icon>
           </paper-item>
-          <paper-item style="display: inline">
-            HTML5
-          </paper-item>
-          <paper-item style="display: inline">
-            CSS3
-          </paper-item>
-          <paper-item style="display: inline">
-            JavaScript
-          </paper-item>
-          <paper-item style="display: inline">
-            Polymer
-          </paper-item>
-          <paper-item style="display: inline">
-            Angular
-          </paper-item>
-          <paper-item style="display: inline">
-            GIT
-          </paper-item>
-          <paper-item style="display: inline">
-            Github
-          </paper-item>
-          <paper-item style="display: inline">
-            GitLab
-          </paper-item>
-          <paper-item style="display: inline">
-            Bower
-          </paper-item>
-          <paper-item style="display: inline">
-            SourceTree
-          </paper-item>
-          <paper-item style="display: inline">
-            Grunt
-          </paper-item>
-          <paper-item style="display: inline">
-            LESS
-          </paper-item>
-          <paper-item style="display: inline">
-            SASS
-          </paper-item>
-          <paper-item style="display: inline">
-            Bootstrap
-          </paper-item>
-          <paper-item style="display: inline">
-            NodeJS
-          </paper-item>
-          <paper-item style="display: inline">
-            MySQL
-          </paper-item>
-          <paper-item style="display: inline">
-            MongoDB
-          </paper-item>
-          <paper-item style="display: inline">
-            Postman
-          </paper-item>
-          <paper-item style="display: inline">
-            Jenkins
-          </paper-item>
+          <span class="section">
+            <paper-item style="display: inline">
+              HTML5
+            </paper-item>
+            <paper-item style="display: inline">
+              CSS3
+            </paper-item>
+            <paper-item style="display: inline">
+              JavaScript
+            </paper-item>
+            <paper-item style="display: inline">
+              Polymer
+            </paper-item>
+            <paper-item style="display: inline">
+              Angular
+            </paper-item>
+            <paper-item style="display: inline">
+              GIT
+            </paper-item>
+            <paper-item style="display: inline">
+              Github
+            </paper-item>
+            <paper-item style="display: inline">
+              GitLab
+            </paper-item>
+            <paper-item style="display: inline">
+              Bower
+            </paper-item>
+            <paper-item style="display: inline">
+              SourceTree
+            </paper-item>
+            <paper-item style="display: inline">
+              Grunt
+            </paper-item>
+            <paper-item style="display: inline">
+              LESS
+            </paper-item>
+            <paper-item style="display: inline">
+              SASS
+            </paper-item>
+            <paper-item style="display: inline">
+              Bootstrap
+            </paper-item>
+            <paper-item style="display: inline">
+              NodeJS
+            </paper-item>
+            <paper-item style="display: inline">
+              MySQL
+            </paper-item>
+            <paper-item style="display: inline">
+              MongoDB
+            </paper-item>
+            <paper-item style="display: inline">
+              Postman
+            </paper-item>
+            <paper-item style="display: inline">
+              Jenkins
+            </paper-item>
+          </span>
         </paper-menu>
       </pro-experience-submenu>
     </paper-menu>
