feat - images now taken from firebaseCloudStorage

--- a/custom_components/pro-journeys.html
+++ b/custom_components/pro-journeys.html
@@ -22,73 +22,73 @@
     <iron-grid current-screenformat="{{screenSize}}" class="container">
 
         <pro-journey
-          image-url="../images/Rome.jpg"
+          image-url="https://firebasestorage.googleapis.com/v0/b/hecmocer-pro.appspot.com/o/media%2FRome.jpg?alt=media&token=65894201-e30e-49b1-8710-a781e0a49820"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../images/Germany.jpg"
+          image-url="https://firebasestorage.googleapis.com/v0/b/hecmocer-pro.appspot.com/o/media%2FGermany.JPG?alt=media&token=76dca4a9-ddf6-41b7-9d3c-1b80518d3422"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../images/Manzanares.jpg"
+          image-url="https://firebasestorage.googleapis.com/v0/b/hecmocer-pro.appspot.com/o/media%2FManzanares.jpg?alt=media&token=16799fd6-05ac-485e-b96a-f9fb5b439e83"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../images/Paris.jpg"
+          image-url="https://firebasestorage.googleapis.com/v0/b/hecmocer-pro.appspot.com/o/media%2FParis.jpg?alt=media&token=1e46fea6-f318-4fa5-9689-4d7d0a7fcd7f"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../images/Brussels.jpg"
+          image-url="https://firebasestorage.googleapis.com/v0/b/hecmocer-pro.appspot.com/o/media%2FBrussels.jpg?alt=media&token=4671b825-373e-4b1d-91d4-89dfdfce7008"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../images/Hillerod.jpg"
+          image-url="https://firebasestorage.googleapis.com/v0/b/hecmocer-pro.appspot.com/o/media%2FHillerod.jpg?alt=media&token=dfd2eade-cc6b-4a24-87cf-e3f020f91b07"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../images/Helsinki.jpg"
+          image-url="https://firebasestorage.googleapis.com/v0/b/hecmocer-pro.appspot.com/o/media%2FHelsinki.jpg?alt=media&token=25134349-0460-447e-a3b2-8d0f7b17616c"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../images/Stockholm.jpg"
+          image-url="https://firebasestorage.googleapis.com/v0/b/hecmocer-pro.appspot.com/o/media%2FStockholm.jpg?alt=media&token=e9214a63-b13c-4cb3-aba3-096351e372b5"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../images/Odense.jpg"
+          image-url="https://firebasestorage.googleapis.com/v0/b/hecmocer-pro.appspot.com/o/media%2FOdense.jpg?alt=media&token=6666c3c8-61df-4ce7-b422-eb336bca7c5a"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../images/RUC.jpg"
+          image-url="https://firebasestorage.googleapis.com/v0/b/hecmocer-pro.appspot.com/o/media%2FRUC.jpg?alt=media&token=927db8ae-fb6b-474b-b24b-6f98beb73773"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../images/Merida.jpg"
+          image-url="https://firebasestorage.googleapis.com/v0/b/hecmocer-pro.appspot.com/o/media%2FMerida.jpg?alt=media&token=7203a981-b558-46ff-a455-033ed602b7ae"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
 
         <pro-journey
-          image-url="../images/London.jpg"
+          image-url="https://firebasestorage.googleapis.com/v0/b/hecmocer-pro.appspot.com/o/media%2FLondon.jpg?alt=media&token=c56206c1-1467-4493-a15d-9d913a3666a4"
           text="{{t('pro-journeys-textn')}}"
           class="xs12 s6 m4 l3">
         </pro-journey>
