--- a/custom_components/pro-welcome.html
+++ b/custom_components/pro-welcome.html
@@ -22,7 +22,7 @@
     <iron-media-query query="(min-width: 600px)" query-matches="{{queryMatches}}"></iron-media-query>
 
     <template is="dom-if" if="{{!queryMatches}}">
-      <img class="imageCenter" src="../images/profile.jpg" alt="">
+      <img class="imageCenter" src="https://firebasestorage.googleapis.com/v0/b/hecmocer-pro.appspot.com/o/media%2FProfile.jpg?alt=media&token=7d409106-6515-4131-9ea9-822bc1888d6a" alt="">
     </template>
 
     <template is="dom-if" if="{{queryMatches}}">
