--- a/src/my-app.html
+++ b/src/my-app.html
@@ -36,7 +36,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </app-drawer>
 
     <div class="sections">
-      <pro-welcome class="fullVh" image-url="../src/welcome.mov"></pro-welcome>
+      <pro-welcome class="fullVh"
+      image-url="https://firebasestorage.googleapis.com/v0/b/hecmocer-pro.appspot.com/o/media%2Fwelcome.mp4?alt=media&token=b329f131-df1a-41ec-80c0-50e110f5b91a"
+      ></pro-welcome>
       <pro-profile class="sectionPadding"></pro-profile>
       <pro-experience class="sectionPadding"></pro-experience>
       <pro-journeys class="sectionPadding"></pro-journeys>
