--- a/custom_components/pro-journey.html
+++ b/custom_components/pro-journey.html
@@ -45,14 +45,26 @@
         max-height: 90vh;
         max-width: 100%;
       }
+
+      .spinner-container{
+        display: flex;
+        align-items: center;
+        margin: 0 auto;
+      }
     </style>
 
     <div class="wrapper">
       <img src="{{imageUrl}}" alt="" class="hoverable img" on-click="openDialog">
+      <div class="spinner-container">
+        <paper-spinner-lite active></paper-spinner-lite>
+      </div>
     </div>
 
     <paper-dialog id="dialog" class="dialog" with-backdrop>
       <img src="{{imageUrl}}" alt="" class="dialogImage" style="padding: 0; margin: 0;">
+      <div class="spinner-container">
+        <paper-spinner-lite active></paper-spinner-lite>
+      </div>
     </paper-dialog>
 
   </template>
